@@ -21,6 +21,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.Date;
 import java.util.HashMap;
@@ -123,8 +124,8 @@ public class AuthService {
         String fName = (firstName != null) ? firstName : "";
         String lName = (lastName != null) ? lastName : "";
 
-        String fullName = fName + " " + lName;
-        String encodedFullName = java.net.URLEncoder.encode(fullName, "UTF-8");
+        String fullName = fName + lName;
+        String encodedFullName = java.net.URLEncoder.encode(fullName, StandardCharsets.UTF_8).replace("+", " ");
 
         Cookie cookie = new Cookie("fullname", encodedFullName);
         cookie.setHttpOnly(false);
